--- a/_includes/ad.html
+++ b/_includes/ad.html
@@ -7,7 +7,7 @@
 <div class="ad">
     <a href="http://www.xudadi.com" target="_blank">
         <div class="ad_subtitle">
-            Hello Kikuchanj
+            Hello AD,广告招商中
         </div>
     </a>
 </div>
