--- a/_includes/reward.html
+++ b/_includes/reward.html
@@ -18,7 +18,7 @@
         </div>
 
         <div id="alipay" style="display: inline-block">
-            <img id="alipay_qr" src="/assets/img/def/wechat.png" alt="Alipay"/>
+            <img id="alipay_qr" src="/assets/img/def/alipay.png" alt="Alipay"/>
             <p>支付宝打赏</p>
         </div>
     </div>
