--- a/_includes/reward.html
+++ b/_includes/reward.html
@@ -17,10 +17,10 @@
             <p>微信打赏</p>
         </div>
 
-        <div id="alipay" style="display: inline-block">
+<!--         <div id="alipay" style="display: inline-block">
             <img id="alipay_qr" src="/assets/img/def/alipay.png" alt="Alipay"/>
             <p>支付宝打赏</p>
-        </div>
+        </div> -->
     </div>
 </div>
 
