--- a/_includes/stats.html
+++ b/_includes/stats.html
@@ -1,5 +1,11 @@
 <div class="stats" style="display: none">
-<!--S stats-->
-<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? "https://" : "http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1271375665'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s13.cnzz.com/stat.php%3Fid%3D1271375665' type='text/javascript'%3E%3C/script%3E"));</script>
-<!--E stats-->
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?52f1c47fe51c1d56cf1d02dd4bb78aab";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
 </div>
