--- a/_includes/ad.html
+++ b/_includes/ad.html
@@ -5,7 +5,7 @@
 </head>
 
 <div class="ad">
-    <a href="http://www.xudadi.com" target="_blank">
+    <a href="https://xudadi.cn" target="_blank">
         <div class="ad_subtitle">
             Hello AD,广告招商中
         </div>
