--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,18 +1,18 @@
 <head>
-    <link rel="stylesheet" type="text/css" href="/assets/css/blog.css">
+    <link rel="stylesheet" type="text/css" href="/blog/assets/css/blog.css">
     <meta name="theme-color" content="#151515"/>    
     <meta charset="utf-8"/>
 </head>
 <div class="header">
     <div class="nav-home">
         <a href="/blog/default.html"><span>{{ site.name }}</span></a>
-        <a href="/"><img src="{{ site.logo }}" /></a>
+        <a href="/blog/"><img src="/blog{{ site.logo }}" /></a>
     </div>
 <span class="module-title">{{ page.title }}</span>
 <ul class="nav-tab-others">
     {% for nav in site.navs %} 
     {% if nav.label != page.title %}
-   <li><a href="{{ nav.href }}">{{ nav.label }}</a></li>
+   <li><a href="/blog{{ nav.href }}">{{ nav.label }}</a></li>
     {% endif %} 
     {% endfor %}
 </ul>
