--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
-<head>
+<!-- <head>
     <link rel="stylesheet" type="text/css" href="/blog/assets/css/blog.css">
     <meta name="theme-color" content="#151515"/>    
     <meta charset="utf-8"/>
-</head>
+</head> header.html-->
 <div class="header">
     <div class="nav-home">
         <a href="/blog/default.html"><span>{{ site.name }}</span></a>
