--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -14,8 +14,8 @@ body {
 body {
     margin: 0;
     padding: 0;
-    background: #151515;
-    color: white;
+    /* background: #151515; */
+    color: black;
     font-weight: 300;
     font-size: 20px;
 }
@@ -217,7 +217,7 @@ body {
 }
 
 .nav-home a {
-    color: white;
+    color: black;
     text-decoration: none;
 }
 
@@ -262,7 +262,7 @@ body {
 }
 
 .nav-tab-others a {
-    color: white;
+    color: black;
     text-decoration: none;
     font-size: 0.9em;
 }
@@ -305,13 +305,13 @@ body {
 /*S Post*/
 .post-content {
     word-wrap: break-word;
-    font-size: 0.72em;
+    font-size: 1em;
     line-height: 1.68;
     font-weight: 400;
     overflow: hidden;
     letter-spacing: 0.036em;
-    margin: 60px 15% 60px;
-    padding: 50px 6.4%;
+    margin: 0px 15% 60px;
+    padding: 0px 6.4%;
     background: white;
     color: #4f4f4f;
 }
@@ -547,14 +547,14 @@ td {
 .footer {
     text-align: center;
     letter-spacing: 0.08em;
-    color: #FFFFFF;
+    color: #000000;
     margin-top: -80px;
     height: 80px;
     font-size: 20px;
 }
 
 .footer-copyright {
-    color: white;
+    color: black;
     font-size: 0.6em;
     height: 30px;
     margin: 20px auto 0;
@@ -568,7 +568,7 @@ td {
 
 .footer-icon a {
     text-decoration: none;
-    color: whitesmoke;
+    color: black;
     margin: 0 12px;
 }
 
