--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,13 +6,13 @@
 <div class="header">
     <div class="nav-home">
         <a href="/blog/default.html"><span>{{ site.name }}</span></a>
-        <a href="/blog/"><img src="/blog{{ site.logo }}" /></a>
+        <a href="/blog/"><img src="{{ site.logo }}" /></a>
     </div>
 <span class="module-title">{{ page.title }}</span>
 <ul class="nav-tab-others">
     {% for nav in site.navs %} 
     {% if nav.label != page.title %}
-   <li><a href="/blog{{ nav.href }}">{{ nav.label }}</a></li>
+   <li><a href="{{ nav.href }}">{{ nav.label }}</a></li>
     {% endif %} 
     {% endfor %}
 </ul>
