--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
 </head> header.html-->
 <div class="header">
     <div class="nav-home">
-        <a href="/blog/default.html"><span>{{ site.name }}</span></a>
+        <a href="/blog/index.html"><span>{{ site.name }}</span></a>
         <a href="/blog/"><img src="{{ site.logo }}" /></a>
     </div>
 <span class="module-title">{{ page.title }}</span>
