--- a/_includes/ad.html
+++ b/_includes/ad.html
@@ -1,8 +1,10 @@
+<--!start-->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Title</title>
 </head>
+<--!end-->
 
 <div class="ad">
     <a href="https://xudadi.cn" target="_blank">
