--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,5 +17,6 @@
     {% endif %} 
     {% endfor %}
 </ul>
-    <span class="module-title">{{ page.title }}</span>
+    <div style="margin-left: 10%;margin-right: 10%;"><span class="module-title">{{ page.title }}</span></div>
+    <--!文章标题-->
 </div>
