--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,13 +3,15 @@
 </head>
 
 <div class="footer">
+    
     <div class="footer-icon">
         <a class="fa fa-weibo fa-lg" href="http://weibo.com/{{site.weibo_id}}" target="_blank"></a>
         <!--<a class="fa fa-github fa-lg" href="https://github.com/{{site.github_id}}" target="_blank"></a>
         <a class="fa fa-inbox fa-lg" href="mailto:{{site.email}}" target="_blank"></a>-->
     </div>
+    
     <div class="footer-copyright">
-         Copyright &copy; 2003-
-<script type="text/javascript">document.write(new Date().getFullYear());</script> Xudadi All Rights Reserved
+         Copyright &copy; 2003-<script type="text/javascript">document.write(new Date().getFullYear());</script> Xudadi All Rights Reserved
     </div>
+    
 </div>
